serving html files

--- a/views/about.html
+++ b/views/about.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <header>
-      <h1 id="logo">Eatwell</h1>
+      <a href="/"><h1 id="logo">Eatwell</h1></a>
       <ul>
-        <a href="">
+        <a href="/restaurants">
           <li>Browse Restaurants</li>
         </a>
 
-        <a href="">
+        <a href="/recommend">
           <li>Share a Restaurant</li>
         </a>
 
-        <a href="">
+        <a href="/about">
           <li>About Eatwell</li>
         </a>
       </ul>
