--- a/views/recommend.html
+++ b/views/recommend.html
@@ -9,11 +9,19 @@
   </head>
   <body>
     <header>
-      <h1 id="logo">Eatwell</h1>
-      <ul>
-        <a href=""><li>Browse Restaurants</li></a>
-        <a href=""><li>Share a Restaurant</li></a>
-        <a href=""><li>About Eatwell</li></a>
+      <a href="/"><h1 id="logo">Eatwell</h1></a>
+     <ul>
+        <a href="/restaurants">
+          <li>Browse Restaurants</li>
+        </a>
+
+        <a href="/recommend">
+          <li>Share a Restaurant</li>
+        </a>
+
+        <a href="/about">
+          <li>About Eatwell</li>
+        </a>
       </ul>
     </header>
     <main>
