--- a/views/restaurants.html
+++ b/views/restaurants.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <header>
-      <h1 id="logo">Eatwell</h1>
+      <a href="/"><h1 id="logo">Eatwell</h1></a>
       <ul>
-        <a href="/front/restaurants.html">
+        <a href="/restaurants">
           <li>Browse Restaurants</li>
         </a>
 
-        <a href="/front/recommend.html">
+        <a href="/recommend">
           <li>Share a Restaurant</li>
         </a>
 
-        <a href="/front/about.html">
+        <a href="/about">
           <li>About Eatwell</li>
         </a>
       </ul>
