--- a/views/recommend.html
+++ b/views/recommend.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="/"><h1 id="logo">Eatwell</h1></a>
+      <a href="/index"><h1 id="logo">Eatwell</h1></a>
      <ul>
         <a href="/restaurants">
           <li>Browse Restaurants</li>
