getting user data

--- a/views/index.html
+++ b/views/index.html
@@ -33,12 +33,8 @@
       </section>
 
       <section id="other-links">
-        <a href="/front/restaurants.html" class="btn"
-          >Browse Shared Restaurants</a
-        >
-        <a href="/front/recommend.html" class="btn"
-          >Share Your Favourite Restaurant</a
-        >
+        <a href="/restaurants" class="btn">Browse Shared Restaurants</a>
+        <a href="/recommend" class="btn">Share Your Favourite Restaurant</a>
       </section>
     </main>
   </body>
