--- a/views/recommend.html
+++ b/views/recommend.html
@@ -29,7 +29,7 @@
         <h2>Share Favourite Restaurant</h2>
       </section>
       <section id="form-section">
-        <form>
+        <form action="/recommend" method="POST">
           
               <label for="restaurant-name">Restaurant Name</label>
               <input
@@ -42,15 +42,15 @@
               <label for="address">Address</label>
               <input type="text" name="Address" type="text" id="address" />
             
-              <label for="restaurant-name">Restaurant Name</label>
+              <label for="website">Website</label>
               <input
                 type="text"
-                name="restaurant-name"
+                name="website"
                 type="text"
-                id="restaurant-name"
+                id="website"
               />
            
-              <label for="cuisine-type">Restaurant Name</label>
+              <label for="cuisine-type">Type of Cuisine</label>
               <input
                 type="text"
                 name="cuisine-type"
@@ -58,8 +58,8 @@
                 id="cuisine-type"
               />
             
-              <label for="recommendation">Why do you Recommend?</label>
-              <textarea id="recommendation" rows="5"></textarea>
+              <label for="description">Why do you Recommend?</label>
+              <textarea id="description" type="text" rows="5"></textarea>
               <button type="submit">Share</button>
             </li>
           </ul>
