--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -31,16 +31,16 @@
       <section id="form-section">
         <form action="/recommend" method="POST">
           
-              <label for="restaurant-name">Restaurant Name</label>
+              <label for="name">Restaurant Name</label>
               <input
                 type="text"
-                name="restaurant-name"
+                name="name"
                 type="text"
-                id="restaurant-name"
+                id="name"
               />
             
               <label for="address">Address</label>
-              <input type="text" name="Address" type="text" id="address" />
+              <input type="text" name="address" type="text" id="address" />
             
               <label for="website">Website</label>
               <input
@@ -50,12 +50,12 @@
                 id="website"
               />
            
-              <label for="cuisine-type">Type of Cuisine</label>
+              <label for="cuisine">Type of Cuisine</label>
               <input
                 type="text"
-                name="cuisine-type"
+                name="cuisine"
                 type="text"
-                id="cuisine-type"
+                id="cuisine"
               />
             
               <label for="description">Why do you Recommend?</label>
