rendering partial content

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,22 +7,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <header>
-      <a href="/index"><h1 id="logo">Eatwell</h1></a>
-      <ul>
-        <a href="/restaurants">
-          <li>Browse Restaurants</li>
-        </a>
-
-        <a href="/recommend">
-          <li>Share a Restaurant</li>
-        </a>
-
-        <a href="/about">
-          <li>About Eatwell</li>
-        </a>
-      </ul>
-    </header>
+    <%- include('includes/header') %>
     <main>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
