--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,22 +8,7 @@
     <link rel="stylesheet" href="/styles/index.css" />
   </head>
   <body>
-    <header>
-      <a href="/index"><h1 id="logo">Eatwell</h1></a>
-      <ul>
-        <a href="/restaurants">
-          <li>Browse Restaurants</li>
-        </a>
-
-        <a href="/recommend">
-          <li>Share a Restaurant</li>
-        </a>
-
-        <a href="/about">
-          <li>About Eatwell</li>
-        </a>
-      </ul>
-    </header>
+    <%- include('includes/header') %>
     <main>
       <section>
         <h2>Make the World a tastier place!</h2>
