--- a/views/restaurants.ejs
+++ b/views/restaurants.ejs
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Browse Restaurants</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <%- include('includes/head') %>
     <link rel="stylesheet" href="/styles/restaurants.css" />
   </head>
   <body>
