--- a/views/restaurants.ejs
+++ b/views/restaurants.ejs
@@ -16,21 +16,9 @@
 
       <section id="restaurants">
         <ul id="restaurant-list">
-          <% for (const restaurant of restaurants) { %>
-          <li class="restaurant-item">
-            <article>
-              <h2><%= restaurant.name%></h2>
-              <div class="restaurant-meta">
-                <p><%= restaurant.address%></p>
-                <p><%= restaurant.cuisine%></p>
-                <p><%= restaurant.description%></p>
-              </div>
-              <div class="restaurant-action">
-                <a href="<%= restaurant.website%>">view site</a>
-              </div>
-            </article>
-          </li>
-          <% } %>
+          <% for (const restaurant of restaurants) { %> <%-
+          include('includes/restaurants/restaurant-item',
+          {restaurant:restaurant}) %> <% } %>
         </ul>
         <% } %>
       </section>
