dynamic route handling

--- a/views/includes/restaurants/restaurant-item.ejs
+++ b/views/includes/restaurants/restaurant-item.ejs
@@ -7,7 +7,7 @@
       <p><%= restaurant.description%></p>
     </div>
     <div class="restaurant-action">
-      <a href="/restaurants/r1">view site</a>
+      <a href="/restaurants/<%= restaurant.id %>">view site</a>
     </div>
   </article>
 </li>
