--- a/views/restaurant-detail.ejs
+++ b/views/restaurant-detail.ejs
@@ -7,10 +7,10 @@
   <body>
     <%- include('includes/header') %>
     <main>
-      <h1>TITLE OF RESTAURANT<%= rid %></h1>
-      <p>Cuisine Type | Address</p>
-      <p>Description of restaurant</p>
-      <p><a href="">View Website</a></p>
+      <h1><%= restaurant.name %></h1>
+      <p><%= restaurant.cuisine %> | <%= restaurant.address %></p>
+      <p><%= restaurant.description %></p>
+      <p><a href="<%= restaurant.website %>">View Website</a></p>
     </main>
   </body>
 </html>
